--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "types": ["node", "@types/jest"],
+    "types": ["node"],
     "typeRoots" : ["./node_modules/@types"],
   },
   "include": [
